YAPL3/YAPL3Parser.py
# Generated from C:/Users/lp109/OneDrive/Documentos/0lps/01 U/0LaU/000Octavo semestre/Compis/proyectos/01_proyecto/YAPL3.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YAPL3Parser ( Parser ):

    grammarFileName = "YAPL3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "':'", "'<-'", "'('", 
                     "')'", "','", "'SELF_TYPE'", "'Int'", "'String'", "'Bool'", 
                     "'IO'", "'Object'", "'@'", "'.'", "'if'", "'then'", 
                     "'else'", "'fi'", "'while'", "'loop'", "'pool'", "'let'", 
                     "'in'", "'['", "']'", "'new'", "'isvoid'", "'not'", 
                     "'~'", "'return'", "'<'", "'>'", "'<='", "'>='", "'=='", 
                     "'!='", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "RW_INHERITS", 
                      "RW_ISVOID", "RW_WHILE", "RW_CLASS", "RW_LOOP", "RW_ELSE", 
                      "RW_POOL", "RW_THEN", "RW_NEW", "RW_NOT", "RW_FI", 
                      "RW_IF", "RW_IN", "RW_TRUE", "RW_FALSE", "ID", "INT", 
                      "STRING", "WS", "COMMENT", "INLINE_COMMENT", "OP", 
                      "CLASS_ID" ]

    RULE_program = 0
    RULE_classDef = 1
    RULE_feature = 2
    RULE_attr = 3
    RULE_method = 4
    RULE_formals = 5
    RULE_formal = 6
    RULE_type = 7
    RULE_expr = 8
    RULE_func_return = 9
    RULE_comparison_operators = 10
    RULE_bool_value = 11
    RULE_comparison = 12

    ruleNames =  [ "program", "classDef", "feature", "attr", "method", "formals", 
                   "formal", "type", "expr", "func_return", "comparison_operators", 
                   "bool_value", "comparison" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    RW_INHERITS=39
    RW_ISVOID=40
    RW_WHILE=41
    RW_CLASS=42
    RW_LOOP=43
    RW_ELSE=44
    RW_POOL=45
    RW_THEN=46
    RW_NEW=47
    RW_NOT=48
    RW_FI=49
    RW_IF=50
    RW_IN=51
    RW_TRUE=52
    RW_FALSE=53
    ID=54
    INT=55
    STRING=56
    WS=57
    COMMENT=58
    INLINE_COMMENT=59
    OP=60
    CLASS_ID=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(YAPL3Parser.EOF, 0)

        def classDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL3Parser.ClassDefContext)
            else:
                return self.getTypedRuleContext(YAPL3Parser.ClassDefContext,i)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL3Parser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPL3Parser.ExprContext,i)


        def getRuleIndex(self):
            return YAPL3Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = YAPL3Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==42:
                self.state = 26
                self.classDef()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 139611592494022724) != 0):
                self.state = 32
                self.expr(0)
                self.state = 33
                self.match(YAPL3Parser.T__0)
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(YAPL3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RW_CLASS(self):
            return self.getToken(YAPL3Parser.RW_CLASS, 0)

        def CLASS_ID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPL3Parser.CLASS_ID)
            else:
                return self.getToken(YAPL3Parser.CLASS_ID, i)

        def RW_INHERITS(self):
            return self.getToken(YAPL3Parser.RW_INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL3Parser.FeatureContext)
            else:
                return self.getTypedRuleContext(YAPL3Parser.FeatureContext,i)


        def type_(self):
            return self.getTypedRuleContext(YAPL3Parser.TypeContext,0)


        def getRuleIndex(self):
            return YAPL3Parser.RULE_classDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDef" ):
                listener.enterClassDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDef" ):
                listener.exitClassDef(self)




    def classDef(self):

        localctx = YAPL3Parser.ClassDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(YAPL3Parser.RW_CLASS)
            self.state = 43
            self.match(YAPL3Parser.CLASS_ID)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==39:
                self.state = 44
                self.match(YAPL3Parser.RW_INHERITS)
                self.state = 47
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [61]:
                    self.state = 45
                    self.match(YAPL3Parser.CLASS_ID)
                    pass
                elif token in [9, 10, 11, 12, 13, 14, 54]:
                    self.state = 46
                    self.type_()
                    pass
                else:
                    raise NoViableAltException(self)



            self.state = 51
            self.match(YAPL3Parser.T__1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==54:
                self.state = 52
                self.feature()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(YAPL3Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr(self):
            return self.getTypedRuleContext(YAPL3Parser.AttrContext,0)


        def method(self):
            return self.getTypedRuleContext(YAPL3Parser.MethodContext,0)


        def getRuleIndex(self):
            return YAPL3Parser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)




    def feature(self):

        localctx = YAPL3Parser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.attr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.method()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YAPL3Parser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(YAPL3Parser.TypeContext,0)


        def expr(self):
            return self.getTypedRuleContext(YAPL3Parser.ExprContext,0)


        def getRuleIndex(self):
            return YAPL3Parser.RULE_attr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr" ):
                listener.enterAttr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr" ):
                listener.exitAttr(self)




    def attr(self):

        localctx = YAPL3Parser.AttrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(YAPL3Parser.ID)
            self.state = 65
            self.match(YAPL3Parser.T__3)
            self.state = 66
            self.type_()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 67
                self.match(YAPL3Parser.T__4)
                self.state = 68
                self.expr(0)


            self.state = 71
            self.match(YAPL3Parser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YAPL3Parser.ID, 0)

        def formals(self):
            return self.getTypedRuleContext(YAPL3Parser.FormalsContext,0)


        def type_(self):
            return self.getTypedRuleContext(YAPL3Parser.TypeContext,0)


        def func_return(self):
            return self.getTypedRuleContext(YAPL3Parser.Func_returnContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL3Parser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPL3Parser.ExprContext,i)


        def getRuleIndex(self):
            return YAPL3Parser.RULE_method

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)




    def method(self):

        localctx = YAPL3Parser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(YAPL3Parser.ID)
            self.state = 74
            self.match(YAPL3Parser.T__5)
            self.state = 75
            self.formals()
            self.state = 76
            self.match(YAPL3Parser.T__6)
            self.state = 77
            self.match(YAPL3Parser.T__3)
            self.state = 78
            self.type_()
            self.state = 79
            self.match(YAPL3Parser.T__1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 139611592494022724) != 0):
                self.state = 80
                self.expr(0)
                self.state = 81
                self.match(YAPL3Parser.T__0)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.func_return()
            self.state = 89
            self.match(YAPL3Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL3Parser.FormalContext)
            else:
                return self.getTypedRuleContext(YAPL3Parser.FormalContext,i)


        def getRuleIndex(self):
            return YAPL3Parser.RULE_formals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormals" ):
                listener.enterFormals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormals" ):
                listener.exitFormals(self)




    def formals(self):

        localctx = YAPL3Parser.FormalsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_formals)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==54:
                self.state = 91
                self.formal()


            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 94
                self.match(YAPL3Parser.T__7)
                self.state = 95
                self.formal()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YAPL3Parser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(YAPL3Parser.TypeContext,0)


        def getRuleIndex(self):
            return YAPL3Parser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)




    def formal(self):

        localctx = YAPL3Parser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(YAPL3Parser.ID)
            self.state = 102
            self.match(YAPL3Parser.T__3)
            self.state = 103
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YAPL3Parser.ID, 0)

        def getRuleIndex(self):
            return YAPL3Parser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = YAPL3Parser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 18014398509514240) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPL3Parser.ID)
            else:
                return self.getToken(YAPL3Parser.ID, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL3Parser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPL3Parser.ExprContext,i)


        def bool_value(self):
            return self.getTypedRuleContext(YAPL3Parser.Bool_valueContext,0)


        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL3Parser.TypeContext)
            else:
                return self.getTypedRuleContext(YAPL3Parser.TypeContext,i)


        def CLASS_ID(self):
            return self.getToken(YAPL3Parser.CLASS_ID, 0)

        def INT(self):
            return self.getToken(YAPL3Parser.INT, 0)

        def STRING(self):
            return self.getToken(YAPL3Parser.STRING, 0)

        def RW_FALSE(self):
            return self.getToken(YAPL3Parser.RW_FALSE, 0)

        def RW_TRUE(self):
            return self.getToken(YAPL3Parser.RW_TRUE, 0)

        def OP(self):
            return self.getToken(YAPL3Parser.OP, 0)

        def getRuleIndex(self):
            return YAPL3Parser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = YAPL3Parser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                self.state = 108
                self.match(YAPL3Parser.ID)
                self.state = 109
                self.match(YAPL3Parser.T__4)
                self.state = 110
                self.expr(19)
                pass

            elif la_ == 2:
                self.state = 111
                self.match(YAPL3Parser.ID)
                self.state = 112
                self.match(YAPL3Parser.T__5)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 139611592494022724) != 0):
                    self.state = 113
                    self.expr(0)
                    self.state = 118
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==8:
                        self.state = 114
                        self.match(YAPL3Parser.T__7)
                        self.state = 115
                        self.expr(0)
                        self.state = 120
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 123
                self.match(YAPL3Parser.T__6)
                pass

            elif la_ == 3:
                self.state = 124
                self.match(YAPL3Parser.T__16)
                self.state = 127
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                if la_ == 1:
                    self.state = 125
                    self.bool_value()
                    pass

                elif la_ == 2:
                    self.state = 126
                    self.expr(0)
                    pass


                self.state = 129
                self.match(YAPL3Parser.T__17)
                self.state = 130
                self.expr(0)
                self.state = 131
                self.match(YAPL3Parser.T__18)
                self.state = 132
                self.expr(0)
                self.state = 133
                self.match(YAPL3Parser.T__19)
                pass

            elif la_ == 4:
                self.state = 135
                self.match(YAPL3Parser.T__20)
                self.state = 138
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                if la_ == 1:
                    self.state = 136
                    self.bool_value()
                    pass

                elif la_ == 2:
                    self.state = 137
                    self.expr(0)
                    pass


                self.state = 140
                self.match(YAPL3Parser.T__21)
                self.state = 141
                self.expr(0)
                self.state = 142
                self.match(YAPL3Parser.T__22)
                pass

            elif la_ == 5:
                self.state = 144
                self.match(YAPL3Parser.T__1)
                self.state = 145
                self.expr(0)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1:
                    self.state = 146
                    self.match(YAPL3Parser.T__0)
                    self.state = 147
                    self.expr(0)
                    self.state = 152
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 153
                self.match(YAPL3Parser.T__2)
                pass

            elif la_ == 6:
                self.state = 155
                self.match(YAPL3Parser.T__23)
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==54:
                    self.state = 156
                    self.match(YAPL3Parser.ID)
                    self.state = 157
                    self.match(YAPL3Parser.T__3)
                    self.state = 158
                    self.type_()

                    self.state = 159
                    self.match(YAPL3Parser.T__4)
                    self.state = 160
                    self.expr(0)


                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==8:
                    self.state = 164
                    self.match(YAPL3Parser.T__7)
                    self.state = 165
                    self.match(YAPL3Parser.ID)
                    self.state = 166
                    self.match(YAPL3Parser.T__3)
                    self.state = 167
                    self.type_()
                    self.state = 170
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==5:
                        self.state = 168
                        self.match(YAPL3Parser.T__4)
                        self.state = 169
                        self.expr(0)


                    self.state = 176
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 177
                self.match(YAPL3Parser.T__24)
                self.state = 178
                self.match(YAPL3Parser.T__25)
                self.state = 179
                self.expr(0)
                self.state = 180
                self.match(YAPL3Parser.T__26)
                pass

            elif la_ == 7:
                self.state = 182
                self.match(YAPL3Parser.T__27)
                self.state = 185
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [61]:
                    self.state = 183
                    self.match(YAPL3Parser.CLASS_ID)
                    pass
                elif token in [9, 10, 11, 12, 13, 14, 54]:
                    self.state = 184
                    self.type_()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 8:
                self.state = 187
                self.match(YAPL3Parser.T__28)
                self.state = 188
                self.expr(10)
                pass

            elif la_ == 9:
                self.state = 189
                self.match(YAPL3Parser.T__29)
                self.state = 190
                self.expr(9)
                pass

            elif la_ == 10:
                self.state = 191
                self.match(YAPL3Parser.T__30)
                self.state = 192
                self.expr(8)
                pass

            elif la_ == 11:
                self.state = 193
                self.match(YAPL3Parser.T__5)
                self.state = 194
                self.expr(0)
                self.state = 195
                self.match(YAPL3Parser.T__6)
                pass

            elif la_ == 12:
                self.state = 197
                self.match(YAPL3Parser.ID)
                pass

            elif la_ == 13:
                self.state = 198
                self.match(YAPL3Parser.INT)
                pass

            elif la_ == 14:
                self.state = 199
                self.match(YAPL3Parser.STRING)
                pass

            elif la_ == 15:
                self.state = 200
                self.match(YAPL3Parser.RW_FALSE)
                pass

            elif la_ == 16:
                self.state = 201
                self.match(YAPL3Parser.RW_TRUE)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 244
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,26,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 242
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,25,self._ctx)
                    if la_ == 1:
                        localctx = YAPL3Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 204
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 205
                        localctx.op = self.match(YAPL3Parser.OP)
                        self.state = 206
                        self.expr(8)
                        pass

                    elif la_ == 2:
                        localctx = YAPL3Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 207
                        if not self.precpred(self._ctx, 18):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 18)")
                        self.state = 208
                        self.match(YAPL3Parser.T__14)
                        self.state = 211
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [9, 10, 11, 12, 13, 14, 54]:
                            self.state = 209
                            self.type_()
                            pass
                        elif token in [61]:
                            self.state = 210
                            self.match(YAPL3Parser.CLASS_ID)
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 213
                        self.match(YAPL3Parser.T__15)
                        self.state = 214
                        self.match(YAPL3Parser.ID)
                        self.state = 215
                        self.match(YAPL3Parser.T__5)
                        self.state = 224
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & 139611592494022724) != 0):
                            self.state = 216
                            self.expr(0)
                            self.state = 221
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==8:
                                self.state = 217
                                self.match(YAPL3Parser.T__7)
                                self.state = 218
                                self.expr(0)
                                self.state = 223
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)



                        self.state = 226
                        self.match(YAPL3Parser.T__6)
                        pass

                    elif la_ == 3:
                        localctx = YAPL3Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 227
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 228
                        self.match(YAPL3Parser.T__15)
                        self.state = 229
                        self.match(YAPL3Parser.ID)
                        self.state = 230
                        self.match(YAPL3Parser.T__5)
                        self.state = 239
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & 139611592494022724) != 0):
                            self.state = 231
                            self.expr(0)
                            self.state = 236
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==8:
                                self.state = 232
                                self.match(YAPL3Parser.T__7)
                                self.state = 233
                                self.expr(0)
                                self.state = 238
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)


